html and css designed

--- a/index.html
+++ b/index.html
@@ -7,7 +7,32 @@
 	<title>Calculator</title>
 </head>
 <body>
-	hello
+	<div class="calculator-container">
+		<div class="calculator-display">
+		  <div class="previous-operand">3214</div>
+		  <div class="current-operand">324324</div>
+		</div>
+	
+		<button class="two-cols clear">AC</button>
+		<button class="delete">DEL</button>
+		<button class="operator">/</button>
+		<button class="number" value="1">1</button>
+		<button class="number" value="2">2</button>
+		<button class="number" value="3">3</button>
+		<button class="operator">*</button>
+		<button class="number" value="4">4</button>
+		<button class="number" value="5">5</button>
+		<button class="number" value="6">6</button>
+		<button class="operator">-</button>
+		<button class="number" value="7">7</button>
+		<button class="number" value="8">8</button>
+		<button class="number" value="9">9</button>
+		<button class="operator">+</button>
+		<button class="number">.</button>
+		<button class="number" value="0">0</button>
+		<button class="equals-key two-cols result">=</button>
+	
+	  </div>
 </body>
 <script src="app.js"></script>
 </html>
