--- a/index.html
+++ b/index.html
@@ -9,29 +9,28 @@
 <body>
 	<div class="calculator-container">
 		<div class="calculator-display">
-		  <div class="previous-operand">3214</div>
-		  <div class="current-operand">324324</div>
+			<div data-previous-operand class="previous-operand"></div>
+			<div data-current-operand class="current-operand"></div>
 		</div>
 	
-		<button class="two-cols clear">AC</button>
-		<button class="delete">DEL</button>
-		<button class="operator">/</button>
-		<button class="number" value="1">1</button>
-		<button class="number" value="2">2</button>
-		<button class="number" value="3">3</button>
-		<button class="operator">*</button>
-		<button class="number" value="4">4</button>
-		<button class="number" value="5">5</button>
-		<button class="number" value="6">6</button>
-		<button class="operator">-</button>
-		<button class="number" value="7">7</button>
-		<button class="number" value="8">8</button>
-		<button class="number" value="9">9</button>
-		<button class="operator">+</button>
-		<button class="number">.</button>
-		<button class="number" value="0">0</button>
-		<button class="equals-key two-cols result">=</button>
-	
+		<button data-all-clear class="two-cols">AC</button>
+		<button data-delete class="delete">DEL</button>
+		<button data-operation>÷</button>
+		<button data-number>7</button>
+		<button data-number>8</button>
+		<button data-number>9</button>
+		<button data-operation>*</button>
+		<button data-number>4</button>
+		<button data-number>5</button>
+		<button data-number>6</button>
+		<button data-operation>-</button>
+		<button data-number>1</button>
+		<button data-number>2</button>
+		<button data-number>3</button>
+		<button data-operation>+</button>
+		<button data-number>.</button>
+		<button data-number>0</button>
+		<button data-equals class="two-cols">=</button>
 	  </div>
 </body>
 <script src="app.js"></script>
